add inputs to add new todo

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
     
 </ul>
 
+
+ <input type="text" placeholder="Add a new todo">
+    <input type="number" placeholder="add a number">
+    <input type="submit" value="Add todo">
+
 </body>
     </html>
    
