add content for show page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
  <input type="text" placeholder="Add a new todo">
     <input type="number" placeholder="add a number">
     <input type="submit" value="Add todo">
+    
+     <a href="index.html">Go back...</a>
+
 
 </body>
     </html>
