--- a/Show.html
+++ b/Show.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Todo List Application</title>
-    <link rel="stylesheet" href="Second.css" type="text/css" />
+    <link rel="stylesheet" href="Show.css" type="text/css" />
   </head>
   <body>
     <h1>
@@ -11,11 +11,11 @@
 
     <div>
       <input type="checkbox">
-      <h2>List </h2>
+      <h2>Make the curriculum</h2>
       <span>4 Pomodoros</span>
       <a href="#" id="edit-todo-button">Edit</a>
       <a href="#" id="delete-todo-button">Delete</a>
-      <a href="index.html" class="simple-link">Go back...</a>
+      <a href="index.html" class="simple-link">Go back Home page</a>
     </div>
   </body>
 </html>
