--- a/Show.html
+++ b/Show.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>
-      <img class="company-logo" src="https://public.3.basecamp.com/p/iahgNshn1oKq98sWGf1q89Vo/uploads/511042491/download/CodeNow%20Logo.png"></img>
+      <img class="company-logo" src="https://spacegrant.arizona.edu/sites/spacegrant.arizona.edu/files/about/logos/nic_print3600x2993ppi.png"></img>
       Workshop Todo List
     </h1>
 
